RESOLVED FIXED20352
REGRESSION(r31030-31055): Choosing "Print window" from frame set prints blank page
https://bugs.webkit.org/show_bug.cgi?id=20352
Summary REGRESSION(r31030-31055): Choosing "Print window" from frame set prints blank...
Gavin Sherlock
Reported 2008-08-11 17:26:41 PDT
Steps to reproduce: 1. Go to bug url 2. Right click, and select "Print Window" from contextual menu Expected results: The entire contents of the window will be printed Actual results: A blank page Regression - yes - this does not happen in Safari 3.1.2. Tested with r35666 on 10.5.4 on a Mac Pro.
Attachments
Reduction (2.15 KB, application/zip)
2008-10-21 17:13 PDT, Beth Dakin
no flags
Patch (1.42 KB, patch)
2008-10-21 17:21 PDT, Beth Dakin
darin: review+
Mark Rowe (bdash)
Comment 1 2008-08-11 17:29:08 PDT
Gavin Sherlock
Comment 2 2008-08-11 23:05:48 PDT
r31030 works, r31055 fails
Gavin Sherlock
Comment 3 2008-08-11 23:11:56 PDT
I suspect http://trac.webkit.org/changeset/31037 though this is only an untrained eye looking at it.
Beth Dakin
Comment 4 2008-10-21 16:21:06 PDT
Interestingly, the page prints fine if you press command-P or choose Print from the File menu. Only printing with "Print Window" through the context menu is broken.
Beth Dakin
Comment 5 2008-10-21 17:13:58 PDT
Created attachment 24547 [details] Reduction Here is a reduction. I think I have a patch too. Will post shortly.
Beth Dakin
Comment 6 2008-10-21 17:21:09 PDT
Darin Adler
Comment 7 2008-10-21 17:21:57 PDT
Comment on attachment 24548 [details] Patch r=me
Beth Dakin
Comment 8 2008-10-21 17:23:30 PDT
Fixed with r37768.
Note You need to log in before you can comment on or make changes to this bug.